--- a/src/styles/Tab.module.css
+++ b/src/styles/Tab.module.css
@@ -1,5 +1,4 @@
 .tab-list {
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
@@ -14,19 +13,20 @@
 }
 
 .tab-group {
-  background-color: #f3f6f9;
-  border-radius: 1rem;
+  background-color: var(--bg);
+  border-radius: var(--border-ra);
   margin-bottom: 1rem;
   padding: 1rem 0.5rem;
+  min-width: 20rem;
 }
 
 .tab-item {
-  border-radius: 1rem;
+  border-radius: var(--border-ra);
   padding: 3px 8px;
   width: 20rem;
   display: flex;
   cursor: pointer;
-  background-color: #f3f6f9;
+  background-color: var(--bg);
 }
 
 .tab-item:hover {
@@ -65,6 +65,16 @@
 .tab-item .empty-img {
   width: 20px;
   height: 20px;
-  background-color: lightgray;
-  border-radius: 100%;
+  background-color: var(--bg-dark);
+  border-radius: var(--border-ra-lg);
+}
+
+.searchbar {
+  margin: 1rem 0;
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding: 0.8rem;
+  border-radius: var(--border-ra);
+  background-color: var(--bg-dark);
 }
