--- a/src/styles/Tab.module.css
+++ b/src/styles/Tab.module.css
@@ -21,11 +21,11 @@
 }
 
 .tab-item {
+  display: flex;
+  justify-content: space-evenly;
   border-radius: var(--border-ra);
   padding: 3px 5px;
   width: 22rem;
-  display: flex;
-  justify-content: space-evenly;
   cursor: pointer;
   background-color: var(--bg);
 }
@@ -40,7 +40,7 @@
 }
 
 .tab-item > * {
-  margin: 0.3rem;
+  margin: 0.8rem 0.3rem;
 }
 
 .tab-item img {
@@ -65,6 +65,7 @@
 
 .tab-item svg {
   fill: var(--color);
+  cursor: pointer;
 }
 
 .tab-item .empty-img {
@@ -75,10 +76,10 @@
 }
 
 .searchbar {
-  margin: 1rem 0;
   display: flex;
   align-items: center;
   position: relative;
+  margin: 1rem 0;
   padding: 0.8rem;
   border-radius: var(--border-ra);
   background-color: var(--bg-dark);
