refactor: refactor icon styling

--- a/src/styles/Tab.module.css
+++ b/src/styles/Tab.module.css
@@ -68,6 +68,14 @@
   overflow: hidden;
 }
 
+.adornment {
+  display: flex;
+}
+
+.adornment > * {
+  margin: 5px;
+}
+
 .tab-item button {
   background: none;
   border: none;
